<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/page_title"
        layout="@layout/page_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/setting_item_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/pop_message"
                    android:textColor="@color/first_text_color"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="end">

                    <com.suke.widget.SwitchButton
                        android:id="@+id/pop_message_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/auto_alarm"
                    android:textColor="@color/first_text_color"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="end">

                    <com.suke.widget.SwitchButton
                        android:id="@+id/auto_alarm_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/use_mobile_data"
                    android:textColor="@color/first_text_color"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="end">

                    <com.suke.widget.SwitchButton
                        android:id="@+id/use_mobile_data_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/setting_item_background"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/clear_cache"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_row_height"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/clear_cache"
            android:textColor="@color/first_text_color"
            android:textSize="15sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/setting_item_background"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/current_version_string"
                    android:textColor="@color/first_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/current_version"
                    android:textColor="@color/second_text_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/check_upgrade"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_row_height"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/check_upgrade"
                android:textColor="@color/first_text_color"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>