<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:src="@drawable/seeu_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_accout_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_icons_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/account"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_favourite_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_star_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/favourite"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_history_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_icons_photos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/history"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_upload_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_icon_upload" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_poster"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_setting_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_icons_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_about_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_press_selector"
                android:paddingBottom="3dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/symbols_icons_file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/DarkText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
